# protobuf_todo

./: README.md  compose.yaml  readme.rst
microservice/: Dockerfile.dev  pyproject.toml
microservice/app/: main.py  settings.py
todo/: Dockerfile.dev  pyproject.toml
todo/app/: main.py
